cmds-src/errors.txt
g++ : In file included from C:/mingw
64/mingw64/x86_64-w64-mingw32/includ
e/_mingw.h:10,
At line:1 char:1
+ g++ -std=c++17 -c lvc.cpp 2>&1 | 
Out-File -Encoding utf8 errors.txt; 
 ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: (In file include...de/  
  _mingw.h:10,:String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
                 from C:/mingw64/min
gw64/x86_64-w64-mingw32/include/core
crt.h:10,
                 from C:/mingw64/min
gw64/x86_64-w64-mingw32/include/wcha
r.h:9,
                 from C:/mingw64/min
gw64/include/c++/15.2.0/cwchar:49,
                 from C:/mingw64/min
gw64/include/c++/15.2.0/bits/postype
s.h:42,
                 from C:/mingw64/min
gw64/include/c++/15.2.0/bits/char_tr
aits.h:44,
                 from C:/mingw64/min
gw64/include/c++/15.2.0/string:44,
                 from lvc.hpp:8,
                 from lvc.cpp:5:
lvc.hpp: In static member function 
'static 
std::vector<MyersDiff::DiffHunk> 
MyersDiff::diff(const std::string&, 
const std::string&, int)':
lvc.hpp:259:26: error: invalid 
conversion from 'long int' to 
'MyersDiff::EditType' [-fpermissive]
  259 |                 e.type = 
DELETE;
      |                          ^
      |                          |
      |                          
long int
lvc.hpp:299:22: error: invalid 
conversion from 'long int' to 
'MyersDiff::EditType' [-fpermissive]
  299 |             e.type = DELETE;
      |                      ^
      |                      |
      |                      long 
int
